Patient Portal Scraper Project

--- a/Patient Portal Scraper/project_scraper_one.ipynb
+++ b/Patient Portal Scraper/project_scraper_one.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
     "        master_list.append(data_dict)\n",
     "    print(clinic_id)\n",
     "\n",
-    "print('Done') "
+    "print('Done Getting Patient Portal') "
    ]
   },
   {
