--- a/Patient Portal Scraper/project_scraper_one.ipynb
+++ b/Patient Portal Scraper/project_scraper_one.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Page Title Scraper"
+    "### Section 1: Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 2: Define Function to Get Clinic Name"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +40,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "start   = 12700\n",
-    "end     = 12720"
+    "### Section 3: Loop Through Clinic IDs and Extract Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,11 +76,14 @@
       "12718\n",
       "12719\n",
       "12720\n",
-      "Done\n"
+      "Done Getting Patient Portal\n"
      ]
     }
    ],
    "source": [
+    "start   = 12700\n",
+    "end     = 12720\n",
+    "\n",
     "master_list = []\n",
     "\n",
     "for clinic_id in range(start,end+1):\n",
@@ -91,8 +98,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 4: Documenting into CSV (Excels)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +236,7 @@
        "13      12719                        Regenerative Medical Group"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
